nickelheaders parsing, basic.cpp rework, basic static website

--- a/web/page_0.html
+++ b/web/page_0.html
@@ -2,7 +2,6 @@
 <html>
   <body>
 	<a href="./index.html">Home</a>
-    <p>My first page</p>
-	<a href="./page_0.html">page_0</a>
+    <p>page_0</p>
   </body>
 </html>
