revamped the web page

--- a/web/index.html
+++ b/web/index.html
@@ -1,42 +1,12 @@
 <!doctype html>
 <link rel="stylesheet" href="style.css" />
-<html style="height: 100%; width: 100%">
-  <body
-    style="
-      height: 100%;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    "
-  >
-    <div style="height: 50%">
-      <form
-        type="text"
-        style="
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          background-color: grey;
-          height: 100%;
-          margin: 16px;
-          border-radius: 16px;
-        "
-      >
-        <div style="flex-direction: row">
-          <div>
-            <label for="fname">Name</label>
-            <input type="text" id="fname" value="" />
-          </div>
-          <div>
-            <label for="fage">Age</label>
-            <input type="text" id="fage" value="" />
-          </div>
-        </div>
-        <input type="submit" value="Submit" />
-      </form>
+<html>
+  <body>
+    <h1>SpiderServ</h1>
+    <div class="top-bar">
+      <a href="">placeholder</a>
+      <a href="">placeholder</a>
+      <a href="">placeholder</a>
     </div>
   </body>
 </html>
