test rework, simple cgi and some minor modifications

--- a/web/index.html
+++ b/web/index.html
@@ -4,9 +4,9 @@
   <body>
     <h1>SpiderServ</h1>
     <div class="top-bar">
-      <a href="">placeholder</a>
-      <a href="">placeholder</a>
-      <a href="">placeholder</a>
+      <a href="cgi.html">CGI</a>
+      <a href="#">placeholder</a>
+      <a href="prout.html">invalid_link</a>
     </div>
   </body>
 </html>
