<work_in_progress> cgi, and str_to_e_Methods with refactor

--- a/web/cgi.html
+++ b/web/cgi.html
@@ -2,6 +2,14 @@
 <link rel="stylesheet" href="style.css" />
 <html>
   <body>
-    <p>Placeholder for the cgi page</p>
+    <form action="cgi-bin/cgi.py" method="GET">
+      <input type="submit" value="Run Python Script" />
+    </form>
+    <form action="cgi-bin/cgi.pl" method="GET">
+      <input type="submit" value="Run Perl Script" />
+    </form>
+    <form action="cgi-bin/cgi.sh" method="GET">
+      <input type="submit" value="Run Bash Script" />
+    </form>
   </body>
 </html>
