--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>42WebServ</title>
-    <link rel="stylesheet" href="index/index.css">
+    <link rel="stylesheet" href="main/index/index.css">
 </head>
 <body>
     <header>
@@ -42,7 +42,7 @@
             <div class="mandatory-cards">
                 <div class="card" style="background-color: #d4edda;">
                     <h3>Uploads</h3>
-                    <a href="./uploads/uploads.html">
+                    <a href="main/uploads/uploads.html">
                         <button>Go to Uploads</button>
                     </a>
                 </div>
@@ -50,6 +50,6 @@
             </div>
         </section>
     </main>
-    <script src="index/index.js"></script>
+    <script src="main/index/index.js"></script>
 </body>
 </html>
