--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -24,32 +24,49 @@
         </div>
     </header>
     <main>
-        <section class="portfolios">
-            <h2>Portfolios</h2>
-            <div class="portfolio-cards">
-                <div class="card" style="background-color: #cfe2ff;">
-                    <h3>Eviala</h3>
-                    <button id="open-eviala">Open</button>
-                </div>
-                <div class="card" style="background-color: #ffe5d9;">
-                    <h3>Dtrala</h3>
-                    <button id="open-dtrala">Open</button>
-                </div>
+        <div class="container">
+            <div class="file-list-card card">
+                <div class="card-title">Liste des fichiers</div>
+                <div class="card-content"></div>
             </div>
-        </section>
-        <section class="mandatory" id="mandatory-section">
-            <h2>Mandatory</h2>
-            <div class="mandatory-cards">
-                <div class="card" style="background-color: #d4edda;">
-                    <h3>Uploads</h3>
-                    <a href="main/uploads/uploads.html">
-                        <button>Go to Uploads</button>
-                    </a>
-                </div>
-                <!-- Add more mandatory cards here -->
+            <div class="main-content">
+                <section class="portfolios">
+                    <h2>Portfolios</h2>
+                    <div class="portfolio-cards">
+                        <div class="card" style="background-color: #cfe2ff;">
+                            <h3>Eviala</h3>
+                            <button id="open-eviala">Open</button>
+                        </div>
+                        <div class="card" style="background-color: #ffe5d9;">
+                            <h3>Dtrala</h3>
+                            <button id="open-dtrala">Open</button>
+                        </div>
+                    </div>
+                </section>
+                <section class="mandatory" id="mandatory-section">
+                    <h2>Mandatory</h2>
+                    <div class="mandatory-cards">
+                        <div class="card" style="background-color: #d4edda;">
+                            <h3>Uploads</h3>
+                            <a href="main/uploads/uploads.html">
+                                <button>Go to Uploads</button>
+                            </a>
+                        </div>
+                        <div class="card" style="background-color: #d4edda;">
+                            <h3>Another Card</h3>
+                            <button>Go to Another</button>
+                        </div>
+                        <div class="card" style="background-color: #d4edda;">
+                            <h3>Third Card</h3>
+                            <button>Go to Third</button>
+                        </div>
+                        <!-- Add more mandatory cards here -->
+                    </div>
+                </section>
             </div>
-        </section>
+        </div>
     </main>
     <script src="main/index/index.js"></script>
 </body>
 </html>
+
