--- a/goodweb/main/uploads/uploads.html
+++ b/goodweb/main/uploads/uploads.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upload Files</title>
-    <link rel="stylesheet" href="../index/index.css">
     <link rel="stylesheet" href="./uploads.css">
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <img src="../images/images.png" alt="Logo" class="logo">
-            <a href="../index.html" class="title-link">
+            <img src="../../images/images.png" alt="Logo" class="logo">
+            <a href="../../index.html" class="title-link">
                 <h1>WEBSERV</h1>
             </a>
         </div>
