--- a/goodweb/main/uploads/uploads.html
+++ b/goodweb/main/uploads/uploads.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="../images/images.png" alt="Logo" class="logo">
-            <a href="../index.html" class="title-link">
+            <img src="../../images/images.png" alt="Logo" class="logo">
+            <a href="../../index.html" class="title-link">
                 <h1>WEBSERV</h1>
             </a>
         </div>
