--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -25,10 +25,6 @@
     </header>
     <main>
         <div class="container">
-            <div class="file-list-card card">
-                <div class="card-title">Liste des fichiers</div>
-                <div class="card-content"></div>
-            </div>
             <div class="main-content">
                 <section class="portfolios">
                     <h2>Portfolios</h2>
@@ -53,8 +49,10 @@
                             </a>
                         </div>
                         <div class="card" style="background-color: #d4edda;">
-                            <h3>Another Card</h3>
-                            <button>Go to Another</button>
+                            <h3>List</h3>
+                            <a href="main/cgi-files/list.py">
+                                <button>Go to List</button>
+                            </a>
                         </div>
                         <div class="card" style="background-color: #d4edda;">
                             <h3>Third Card</h3>
