Checkpoint : list en cpp

--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -44,13 +44,13 @@
                     <div class="mandatory-cards">
                         <div class="card" style="background-color: #d4edda;">
                             <h3>Uploads</h3>
-                            <a href="main/uploads/uploads.html">
+                            <a href="uploads/uploads.html">
                                 <button>Go to Uploads</button>
                             </a>
                         </div>
                         <div class="card" style="background-color: #d4edda;">
                             <h3>List</h3>
-                            <a href="main/cgi-files/list.py">
+                            <a href="cgi-files/list.py">
                                 <button>Go to List</button>
                             </a>
                         </div>
