--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="card" style="background-color: #d4edda;">
                             <h3>List</h3>
-                            <a href="cgi-files/list.py">
+                            <a href="list/">
                                 <button>Go to List</button>
                             </a>
                         </div>
