nice error page

--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -54,6 +54,18 @@
                                 <button>Go to List</button>
                             </a>
                         </div>
+                        <div class="card" style="background-color: #d4edda;">
+                            <h3>Test CGI Python</h3>
+                            <a href="list/">
+                                <button>Go to Python</button>
+                            </a>
+                        </div>
+                        <div class="card" style="background-color: #d4edda;">
+                            <h3>Test CGI Bash</h3>
+                            <a href="list/">
+                                <button>Go to Bash</button>
+                            </a>
+                        </div>
                         <!-- Add more mandatory cards here -->
                     </div>
                 </section>
