--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -56,13 +56,13 @@
                         </div>
                         <div class="card" style="background-color: #d4edda;">
                             <h3>Test CGI Python</h3>
-                            <a href="list/">
+                            <a href="cgi-files/clock.py">
                                 <button>Go to Python</button>
                             </a>
                         </div>
                         <div class="card" style="background-color: #d4edda;">
                             <h3>Test CGI Bash</h3>
-                            <a href="list/">
+                            <a href="cgi-files/sys.sh">
                                 <button>Go to Bash</button>
                             </a>
                         </div>
