changer systme gif

--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -15,7 +15,7 @@
             </a>
         </div>
         <div class="download-container">
-            <a href="./main/download/good-boy.gif" methods="GET" download class="download-button">
+            <a href="./main/download/good-boy.gif" download class="download-button">
                 Télécharger
             </a>
             <a href="https://github.com/vialaenzo/my-CPP_MODULES-42" target="_blank">
