checkpoint attention rot

--- a/goodweb/index.html
+++ b/goodweb/index.html
@@ -44,7 +44,7 @@
                     <div class="mandatory-cards">
                         <div class="card" style="background-color: #d4edda;">
                             <h3>Uploads</h3>
-                            <a href="uploads/uploads.html">
+                            <a href="uploads/">
                                 <button>Go to Uploads</button>
                             </a>
                         </div>
@@ -56,14 +56,26 @@
                         </div>
                         <div class="card" style="background-color: #d4edda;">
                             <h3>Test CGI Python</h3>
-                            <a href="cgi-files/clock.py">
+                            <a href="cgi-bin/clock.py">
                                 <button>Go to Python</button>
                             </a>
                         </div>
                         <div class="card" style="background-color: #d4edda;">
                             <h3>Test CGI Bash</h3>
-                            <a href="cgi-files/sys.sh">
+                            <a href="cgi-bin/sys.sh">
                                 <button>Go to Bash</button>
+                            </a>
+                        </div>
+                        <div class="card" style="background-color: #d4edda;">
+                            <h3>Redirection</h3>
+                            <a href="/youtube">
+                                <button>Go to Redic</button>
+                            </a>
+                        </div>
+                        <div class="card" style="background-color: #d4edda;">
+                            <h3>Rot</h3>
+                            <a href="rot/">
+                                <button>Ready to Rot</button>
                             </a>
                         </div>
                         <!-- Add more mandatory cards here -->
