--- a/goodweb/main/rot/rot.html
+++ b/goodweb/main/rot/rot.html
@@ -51,8 +51,8 @@
     <div class="container">
         <h1>Encodeur ROT-3</h1>
         <form action="../cgi-bin/rot.py" method="post">
-            <textarea name="texte" placeholder="Écrivez ici..."></textarea>
-            <input type="number", name="number" placeholder="Nombre de rot"></input>
+            <textarea name="texte" placeholder="Écrivez ici..." required></textarea>
+            <input type="number", name="number" placeholder="Nombre de rot" required></input>
             <button type="submit">Encoder</button>
         </form>
     </div>
