--- a/goodweb/main/error_page/404.html
+++ b/goodweb/main/error_page/404.html
@@ -22,7 +22,7 @@
 
         .error-code {
             font-size: 10rem;
-            color: #ff6b6b;
+            color: #1362ca;
             animation: fadeInOut 2s infinite;
         }
 
